--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,6 @@
 html, body {
     width: 100%;
     height: 100%;
-
     background-color: #222;
 }
 
@@ -41,7 +40,7 @@ html, body {
             position: absolute;
 
             width: 320px;
-            height: 360px;
+            //height: 360px;
             margin: 0;
             padding: 40px;
 
